load recipe list from api

--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
     "@nestjs/graphql": "^7.10.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
